feat: synchronize Dub link passwords
