# internal/webserver/api/routing.go
@@ -327,7 +327,6 @@ type paramFilesListSingle struct {
 
 type paramFilesShorten struct {
 	Id           string `header:"id" required:"true"`
-	Password     string `header:"password" supportBase64:"true"`
 	Request      *http.Request
 	foundHeaders map[string]bool
 }
